--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-
-.vscode/
-*.md
-
 # Avoid accidental upload of the Sketch and Figma design files
 #####################################################
 ## Please do not remove lines 5 and 6 - thanks! 🙂 ##
@@ -17,5 +13,5 @@
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
-.prettierignore
+# .prettierignore
 # .gitignore
